--- a/index.html
+++ b/index.html
@@ -162,30 +162,43 @@
         </div>
       </section>
     </main>
-    <footer class="max-w-7xl mx-auto grid grid-cols-2">
-      <div>
-        <div>
-          <img class="h-auto max-w-xl" src="./icons/house.png" alt="" />
-          <h4>Find the Perfect Fit</h4>
-          <p>
-            Everybody is different, which is why we offer styles for every body.
-          </p>
+    <footer class="grid grid-cols-1 lg:grid-cols-2 max-w-7xl mx-auto">
+      <div class="pt-20">
+        <div class="flex">
+          <img class="w-20 h-20" src="./icons/house.png" alt="" />
+          <div>
+            <h4>Find the Perfect Fit</h4>
+            <p>
+              Everybody is different, which is why we offer styles for every
+              body.
+            </p>
+          </div>
         </div>
-        <div>
-          <img src="./icons/box.png" alt="" />
-          <h4>Free Exchanges</h4>
-          <p>One of the many reasons you can shop with peace of mind.</p>
+        <div class="flex pt-7 pb-7">
+          <img class="w-20 h-20" src="./icons/box.png" alt="" />
+          <div>
+            <h4>Free Exchanges</h4>
+            <p>One of the many reasons you can shop with peace of mind.</p>
+          </div>
         </div>
-        <div>
-          <img src="./icons/question.png" alt="" />
-          <h4>Contact Our Seller</h4>
-          <p>
-            They are here to help you. That's quite literally what we pay them
-            for.
-          </p>
+        <div class="flex">
+          <img class="w-20 h-20" src="./icons/question.png" alt="" />
+          <div>
+            <h4>Contact Our Seller</h4>
+            <p>
+              They are here to help you. That's quite literally what we pay them
+              for.
+            </p>
+          </div>
         </div>
       </div>
-      <div><img src="./images/shopping.png" alt="" /></div>
+      <div>
+        <img
+          class="w-3/4 pb-6 lg:w-3/4 pt-16 ml-14"
+          src="./images/shopping.png"
+          alt=""
+        />
+      </div>
     </footer>
   </body>
 </html>
